--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "easymaterialfinder",
+  "name": "easymaterialfinder.oblivious",
   "displayName": "Easy Material Finder",
   "version": "0.2.0",
   "description": "A Unity Editor Window to help you quickly select all materials attached to a gameobject and it's children.",
   "gitDependencies": {},
+  "vpmDependencies": {},
   "legacyFolders": {},
   "legacyFiles": {},
-  "localPath": "D:\\VRChat Stuff\\Unity Folder\\Udon Test Stuff\\Packages\\materialfinder.oblivious",
+  "type": "tool",
+  "hideInEditor": false,
   "unity": "2019.4"
 }
