Further adjustments to AssemblyDefinitions and json files for VCC.

--- a/Editor/materialfinder.oblivious.Editor.asmdef
+++ b/Editor/materialfinder.oblivious.Editor.asmdef
@@ -1,7 +1,7 @@
 {
-    "name": "materialfinder.oblivious.Editor",
+    "name": "easymaterialfinder.oblivious.Editor",
     "references": [
-        "materialfinder.oblivious"
+        "easymaterialfinder.oblivious"
     ],
     "includePlatforms": [
         "Editor"
